--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ buildscript {
     ext.constraintLibVersion    = '1.0.2'
     ext.exoplayerLibVersion     = '2.6.0'
     ext.stethoLibVersion        = '1.5.0'
-    ext.frescoLibVersion        = '1.5.0'
     ext.butterKnifeLibVersion   = '8.8.1'
     ext.roomLibVersion          = '1.0.0'
+    ext.picassoLibVersion       = '2.5.2'
 
     repositories {
         google()
